--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
+<div *ngIf="auth.user$ | async; then authenticated else guest">
+        <!-- template will replace this div -->
+</div>
+
+<!-- User NOT logged in -->
+<ng-template #guest>
+    
+    <button (click)="auth.googleSignin()">
+        <i class="fa fa-google"></i> Root Login
+    </button>
+
+</ng-template>
+
+
+<!-- User logged in -->
+<ng-template #authenticated>
+    <div *ngIf="auth.user$ | async as user">
+        <h6>Hello, {{ user.displayName }}</h6>
+        <p>UID: {{ user.uid }}</p>
+        <button (click)="auth.signOut()">Logout</button>
+    </div>
+</ng-template>
+
 <app-user-form></app-user-form>
